# openGL_renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Content/Shaders/Lighting/: Shaded.frag  Shaded.vert  light.frag  light.vert
Content/Shaders/Lighting/Debug/: depthBuffer.frag  depthBuffer.vert
Content/Shaders/Tests/: basic.frag  basic.vert  light.frag  light.vert  wave.geom
include/glad/: glad.h
src/: Globals.hpp  glad.c  main.cpp
src/Components/: Camera.hpp  Light.hpp  SceneObject.hpp  ShaderObject.hpp  ShaderProgram.hpp  mainEngine.cpp  mainEngine.hpp
src/Helpers/: FileHelpers.hpp
src/Objects/: FullScreenQuad.cpp  FullScreenQuad.hpp  Ground.hpp  Plane.hpp
